--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
   ],
   "dependencies": {},
   "files": [
-    "chosen.jquery.js",
-    "chosen.jquery.min.js",
-    "chosen.proto.js",
-    "chosen.proto.min.js",
-    "chosen.css",
-    "chosen.min.css",
-    "chosen-sprite@2x.png",
-    "chosen-sprite.png"
+    "Reources/public/chosen.jquery.js",
+    "Reources/public/chosen.jquery.min.js",
+    "Reources/public/chosen.proto.js",
+    "Reources/public/chosen.proto.min.js",
+    "Reources/public/chosen.css",
+    "Reources/public/chosen.min.css",
+    "Reources/public/chosen-sprite@2x.png",
+    "Reources/public/chosen-sprite.png"
   ],
-  "main": "chosen.jquery.js",
+  "main": "Reources/public/chosen.jquery.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/harvesthq/chosen.git"
